# Ame_Stocks

./: .env.example  .gitattributes  .gitignore  AGENTS.md  DATA_README.md  README.md  pyproject.toml
.githooks/: post-commit
backend/ame_stocks_api/: __init__.py  artifacts.py  main.py
backend/ame_stocks_api/audit/: __init__.py  bronze.py  daily_products.py  market.py  rest_semantics.py  row_contracts.py
backend/ame_stocks_api/cli/: __init__.py  audit.py  daily_products_audit.py  date_range.py  flatfiles.py  market_audit.py  massive.py  materialize.py  parquet_view.py  prepare_s7_exact_group_history_execution_approval.py  rest_semantics_audit.py  run_s7_exact_group_history_review.py  silver.py  silver_asset_source_profile.py  silver_assets_full.py  silver_assets_full_run_plan.py  silver_assets_full_run_plan_approval.py  silver_assets_preview.py  silver_assets_publish_plan.py  silver_assets_release_set.py  silver_assets_schema_approval.py  silver_assets_schema_review.py  silver_condition_codes_lifecycle.py  silver_exchanges_preview.py  silver_exchanges_release.py  silver_identity_directional_raw_preview_approval.py  silver_identity_directional_raw_preview_manifest_approval.py  silver_identity_directional_raw_preview_manifest_request.py  silver_identity_directional_raw_preview_manifest_run.py  silver_identity_directional_raw_preview_request.py  silver_identity_directional_raw_preview_run.py  silver_identity_exact_group_history_manifest_approval.py  silver_identity_exact_group_history_manifest_run.py  silver_identity_exact_group_history_prepare.py  silver_identity_market_consistency.py  silver_identity_market_inventory_approval.py  silver_identity_market_inventory_execution_request.py  silver_identity_market_inventory_request.py  silver_identity_market_inventory_run.py  silver_identity_market_sequence.py  (+11 more)
backend/ame_stocks_api/downloads/: __init__.py  bronze.py  plan.py  reader.py
backend/ame_stocks_api/flatfiles/: __init__.py  convert.py  massive.py  plan.py
backend/ame_stocks_api/providers/: __init__.py  massive.py  mock.py
backend/ame_stocks_api/silver/: __init__.py  asset_contract.py  asset_full.py  asset_full_run_plan.py  asset_preview.py  asset_publish_plan.py  asset_release_set.py  asset_source.py  asset_source_profile.py  assets.py  availability.py  calendar_artifact.py  condition_code_contract.py  condition_code_lifecycle.py  condition_code_source.py  condition_codes.py  contracts.py  exchange_contract.py  exchange_preview.py  exchange_release.py  exchange_source.py  exchanges.py  fixed_cases.py  identity_adjudication.py  identity_bounce.py  identity_cross_market.py  identity_directional_raw_preview_approval.py  identity_directional_raw_preview_contract.py  identity_directional_raw_preview_execution_plan.py  identity_directional_raw_preview_manifest_approval.py  identity_directional_raw_preview_manifest_plan.py  identity_directional_raw_preview_manifest_request.py  identity_directional_raw_preview_manifest_runner.py  identity_directional_raw_preview_plan.py  identity_directional_raw_preview_request.py  identity_directional_raw_preview_runner.py  identity_exact_group_history_approval.py  identity_exact_group_history_contract.py  identity_exact_group_history_manifest.py  identity_exact_group_history_plan.py  (+43 more)
backend/ame_stocks_api/silver/schema_resources/: asset_master.schema-v1.json  asset_transition.schema-v1.json  condition_code_data_type_bridge.schema-v1.json  (+8 more)
backend/ame_stocks_api/transforms/: __init__.py  materialize.py  ticker_overview.py
docs/: bronze-audit-2026-07-12.md  massive-data-processing-guardrails.md  massive-downloader.md  massive-research-catalog.md  silver-processing-plan.md  silver-s0-contracts.md  silver-s1-exchanges-schema-review.md  silver-s2-ticker-types-schema-review.md  silver-s3-condition-codes-schema-review.md  silver-s4-assets-schema-review.md  silver-s5-ticker-events-schema-review.md  silver-s6-ticker-overview-schema-review.md  silver-s7-derived-v4-schema-review.md  silver-s7-directional-raw-preview-design.md  silver-s7-exact-group-history-review-design.md  silver-s7-four-table-publish-workflow.md  silver-s7-identity-relation-registry-design.md  silver-s7-identity-resolution-schema-review.md  silver-s7-market-reference-prerequisite-plan.md  silver-s7-registry-decision-release-workflow.md  silver-s7-streaming-materialization-design.md
docs/silver/source-profiles/: assets-full-2026-07-13.json  identity-resolution-s7-2026-07-14.json
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: api-status.tsx
infra/: README.md
research/: __init__.py
research/factors/: README.md  __init__.py
scripts/: generate_s7_relation_registry_contracts.py  install_hooks.sh  s7_integrity_receipt.py  s7_small_profile.py  s7_type_anchor_profile.py  s7_universe_profile.py  sync_progress.sh
tests/: test_api.py  test_artifacts.py  test_audit_row_contracts.py  test_bronze_audit.py  test_bronze_downloader.py  test_cli_date_range.py  test_daily_products_audit.py  test_data_provider.py  test_download_plan.py  test_factor_contract.py  test_flatfiles.py  test_market_audit.py  test_massive_cli.py  test_massive_provider.py  test_materialize.py  test_parquet_view.py  test_rest_semantics_audit.py  test_silver_asset_contracts.py  test_silver_asset_full.py  test_silver_asset_full_core.py  test_silver_asset_full_run_plan.py  test_silver_asset_preview.py  test_silver_asset_publish_plan.py  test_silver_asset_release_set.py  test_silver_asset_release_visibility.py  test_silver_asset_source.py  test_silver_asset_source_profile.py  test_silver_assets.py  test_silver_assets_schema_approval_cli.py  test_silver_assets_schema_review_cli.py  test_silver_availability.py  test_silver_calendar_artifact.py  test_silver_cli.py  test_silver_condition_code_lifecycle.py  test_silver_condition_code_source.py  test_silver_condition_codes.py  test_silver_contracts.py  test_silver_exchange_contract.py  test_silver_exchanges.py  test_silver_identity_adjudication.py  (+70 more)
worker/ame_stocks_worker/: __init__.py  celery_app.py
(+71 files in other folders)
