[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "ame-stocks"
version = "0.1.0"
description = "U.S. equity factor research and backtesting platform"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "boto3>=1.42,<2",
  "celery[redis]>=5.6,<5.7",
  "exchange-calendars>=4.13,<4.14",
  "fastapi>=0.139,<0.140",
  "httpx2>=2.5,<3",
  "pandas>=3.0,<3.1",
  "polars>=1.42,<1.43",
  "pyarrow>=25,<26",
  "uvicorn[standard]>=0.51,<0.52",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.1,<10",
  "ruff>=0.15,<0.16",
]

[tool.setuptools.packages.find]
where = ["packages", "backend", "worker"]

[project.scripts]
ame-flatfiles = "ame_stocks_api.cli.flatfiles:main"
ame-audit-bronze = "ame_stocks_api.cli.audit:main"
ame-audit-market = "ame_stocks_api.cli.market_audit:main"
ame-massive = "ame_stocks_api.cli.massive:main"
ame-materialize = "ame_stocks_api.cli.materialize:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["ame_stocks_api", "ame_stocks_core", "ame_stocks_worker", "research"]
