[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "ame-stocks"
version = "0.1.0"
description = "U.S. equity factor research and backtesting platform"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "boto3>=1.42,<2",
  "celery[redis]>=5.6,<5.7",
  "exchange-calendars==4.13.2",
  "fastapi>=0.139,<0.140",
  "httpx2>=2.5,<3",
  "pandas>=3.0,<3.1",
  "polars>=1.42,<1.43",
  "pyarrow>=25,<26",
  "uvicorn[standard]>=0.51,<0.52",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.1,<10",
  "ruff>=0.15,<0.16",
]

[tool.setuptools.packages.find]
where = ["packages", "backend", "worker"]

[tool.setuptools.package-data]
"ame_stocks_api.silver" = ["schema_resources/*.json"]

[project.scripts]
ame-flatfiles = "ame_stocks_api.cli.flatfiles:main"
ame-audit-bronze = "ame_stocks_api.cli.audit:main"
ame-audit-daily-products = "ame_stocks_api.cli.daily_products_audit:main"
ame-audit-market = "ame_stocks_api.cli.market_audit:main"
ame-audit-rest-semantics = "ame_stocks_api.cli.rest_semantics_audit:main"
ame-massive = "ame_stocks_api.cli.massive:main"
ame-materialize = "ame_stocks_api.cli.materialize:main"
ame-silver = "ame_stocks_api.cli.silver:main"
ame-silver-exchanges-preview = "ame_stocks_api.cli.silver_exchanges_preview:main"
ame-silver-exchanges-release = "ame_stocks_api.cli.silver_exchanges_release:main"
ame-silver-ticker-types-schema-approval = "ame_stocks_api.cli.silver_ticker_types_schema_approval:main"
ame-silver-ticker-types-schema-review = "ame_stocks_api.cli.silver_ticker_types_schema_review:main"
ame-silver-ticker-types-preview = "ame_stocks_api.cli.silver_ticker_types_preview:main"
ame-silver-ticker-types-release = "ame_stocks_api.cli.silver_ticker_types_release:main"
ame-silver-condition-codes-lifecycle = "ame_stocks_api.cli.silver_condition_codes_lifecycle:main"
ame-silver-ticker-events-lifecycle = "ame_stocks_api.cli.silver_ticker_events_lifecycle:main"
ame-silver-ticker-overview-lifecycle = "ame_stocks_api.cli.silver_ticker_overview_lifecycle:main"
ame-silver-assets-source-profile = "ame_stocks_api.cli.silver_asset_source_profile:main"
ame-silver-assets-schema-review = "ame_stocks_api.cli.silver_assets_schema_review:main"
ame-silver-assets-schema-approval = "ame_stocks_api.cli.silver_assets_schema_approval:main"
ame-silver-assets-preview = "ame_stocks_api.cli.silver_assets_preview:main"
ame-silver-assets-full-run-plan = "ame_stocks_api.cli.silver_assets_full_run_plan:main"
ame-silver-assets-full-run-plan-approval = "ame_stocks_api.cli.silver_assets_full_run_plan_approval:main"
ame-silver-assets-full = "ame_stocks_api.cli.silver_assets_full:main"
ame-silver-assets-publish-plan = "ame_stocks_api.cli.silver_assets_publish_plan:main"
ame-silver-assets-release-set = "ame_stocks_api.cli.silver_assets_release_set:main"
ame-silver-identity-preview-request = "ame_stocks_api.cli.silver_identity_preview_request:main"
ame-silver-identity-market-inventory-request = "ame_stocks_api.cli.silver_identity_market_inventory_request:main"
ame-view-parquet = "ame_stocks_api.cli.parquet_view:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["ame_stocks_api", "ame_stocks_core", "ame_stocks_worker", "research"]
